update on July 1st 2022.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,5 +21,6 @@
   image = {/assets/img/pub_img/skinProfiler.png},
   html = {https://doi.org/10.1145/3539494.3542757},
   pdf = {SkinProfiler.pdf},
+  slides = {SkinProfiler_slides_mobisys22.pdf},
   abbr = {workshop},
 }
