--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,11 @@
 ---
 ---
 
+
+
+
+
+
 @inproceedings{10.1145/3539494.3542757,
   author = {Li, Zhiying and Viswanath, Tejas and Yan, Zihan and Zhang, Yang},
   title = {SkinProfiler: Low-Cost 3D Scanner for Skin Health Monitoring with Mobile Devices},
@@ -22,5 +27,5 @@
   html = {https://doi.org/10.1145/3539494.3542757},
   pdf = {SkinProfiler.pdf},
   slides = {SkinProfiler_slides_mobisys22.pdf},
-  abbr = {workshop},
+  abbr = {MobiSys'22 (Workshop)},
 }
