--- a/_posts/_draft/2018-12-22-distill.md
+++ b/_posts/_draft/2018-12-22-distill.md
@@ -1,28 +1,24 @@
 ---
 layout: distill
-title: SkinProfiler
-description: Low-Cost 3D Scanner for Skin Health Monitoring with Mobile Devices
-date: 2022-06-27
+title: a distill-style blog post
+description: an example of a distill-style blog post and main elements
+date: 2021-05-22
 
 authors:
-  - name: Zhiying Li
-    url:
+  - name: Albert Einstein
+    url: "https://en.wikipedia.org/wiki/Albert_Einstein"
     affiliations:
-      name: UCLA
-  - name: Tejas Viswanath
-    url: "https://www.linkedin.com/in/tejasviswa/"
+      name: IAS, Princeton
+  - name: Boris Podolsky
+    url: "https://en.wikipedia.org/wiki/Boris_Podolsky"
     affiliations:
-      name: UCLA
-  - name: Zihan Yan
-    url: "https://twitter.com/YyyZihan"
+      name: IAS, Princeton
+  - name: Nathan Rosen
+    url: "https://en.wikipedia.org/wiki/Nathan_Rosen"
     affiliations:
-      name: MIT
-  - name: Yang Zhang
-    url: "https://yangzhang.dev/"
-    affiliations:
-      name: UCLA
+      name: IAS, Princeton
 
-bibliography: /assets/bibliography/SkinProfiler.bib
+bibliography: 2018-12-22-distill.bib
 
 # Optionally, you can add a table of contents to your post.
 # NOTES:
@@ -45,6 +41,14 @@ toc:
 # Below is an example of injecting additional post-specific styles.
 # If you use this post as a template, delete this _styles block.
 _styles: >
+  @media (max-width: 576px) {
+    d-title h1 {
+        margin-top: 5rem;
+    }
+  }
+  d-title h1 {
+    margin-top: 2.5rem;
+  }
   .fake-img {
     background: #bbb;
     border: 1px solid rgba(0, 0, 0, 0.1);
@@ -60,32 +64,10 @@ _styles: >
     font-size: 16px;
   }
 
+categories: sample-posts
 ---
 
-**Abstract**
-
-Melanoma is one of the top three most common skin cancers, originating from skin lesions and moles. Keeping track of skin lesion and mole developments in a precise and long-term manner has long been recommended but overlooked for the lack of accurate and easy-to-access tools. In response, we develop SkinProfiler, a low-cost mobile profiling tool for long-term skin health monitoring. To use SkinProfiler, users clamp an LED ring accessory onto smartphone cameras and take photos of the skin region of interest using the SkinProfiler app. Our modified photometric stereo algorithm leverages 17 photos taken with the skin surface lightened under various conditions to reconstruct 3D models of the skin surfaces. Our system stores 3D information for skin lesion and mole monitoring and diagnosis. The total cost of hardware assembly is under 20 dollars. We ran a preliminary evaluation to verify the performance of our tool. Based on the results, we propose several future steps including evaluations in clinical settings to complete this research.
-
-***
-
-## Introduction
-
-Skin cancers are among the most common types of cancer <d-cite key="guy2015vital"></d-cite>. In particular, malignant melanoma can be life-threatening if not detected early. Specifically, metastatic melanoma has a 5-year survival rate of approximately 10%. However, if it can be detected early, the 5-year survival rate increases to approximately 95% <d-cite key="advancedsiences"></d-cite>. Melanoma is the main complication of moles and skin lesions. Most moles, brown spots, and growths on the skin remain harmless but can develop into metastatic melanoma. Therefore, it is essential and recommended to monitor moles and other skin lesions to look for changes in size, shape, or color.
-
-In an out-of-clinic setting, people are recommended to use the ABCDE approach <d-cite key="tsao2015early"></d-cite> and look for the ugly duckling sign \cite{scf}, both of which rely on the naked eye. There have been imaging approaches to facilitate these processes by allowing users to take photos of skin regions of interest \cite{bourouis2013m,sangers2021views,yas2018systematic}. In clinical settings, dermatologists use dermoscopic camera systems, which are essentially high-resolution RGB cameras. These existing approaches only provide human-visible information and much depend on the examiners' experience. These approaches might be subjective and omit important information such as 3D shapes and thus can be prone to error (i.e., higher misclassification rates). Therefore, tools that can be easy to access, provide users with rich information, and work outside clinics to facilitate accurate skin self-examinations, are much needed.
-
-In response, we created a mobile depth imaging tool geared toward skin self-examinations. Melanoma growth in the z-direction can be retrieved by sensing changes in the height with our tools. Our tool consists of an image acquisition phone accessory, algorithms built on the photometric stereo, and a visualization app. Collectively, we name our tool, SkinProfiler. In addition to RGB images of skin surfaces, our tool uniquely enables 3D depth sensing, allowing users to track shape changes of skin lesions and moles. In doing so, we create a new channel of information -- depth, that users can rely on in self-examinations. We focus on depth information, commonly perceived as critical information in melanoma diagnosis. For instance, two metrics out of the five in the ABCDE approach involve checking on the depth information of skin surfaces (i.e., *Asymmetry*, and *Evolving*). Aligned with our effort are prior works that developed hyper-spectral imaging to provide dermatologists invisible information that cannot be provided by dermoscopic camera systems \cite{johansen2020recent}. In addition, new raw sensing data can provide richer feature sets as input and have the potential to enhance existing deep learning methods to aid melanomas diagnosis \cite{10.1145/3195106.3195164}.
-
-Our tool utilizes photometric stereo, which is a conventional technique for 3D reconstruction. Our work differs with prior work \cite{Smith2011} in terms of innovation in using mobile phone camera as the image sensor to reduce the cost of the overall system and enhance the portability. By potentially turning billions of smartphones into skin profiling devices, our contributions include:
-
-1. A compact and low-cost image acquisition phone accessory that features an LED ring for mobile uses.
-2. A calibrated photometric stereo algorithm to retrieve the 3-dimensional geometry.
-3. A visualization phone app that works in concert with the hardware and the algorithm to facilitate users' comprehension of the sensory data.
-4. A preliminary evaluation that verifies the performance of our tool and suggests future steps.
-
-***
-
-## Intro
+## Equations
 
 This theme supports rendering beautiful math in inline and display modes using [MathJax 3](https://www.mathjax.org/) engine.
 You just need to surround your math expression with `$$`, like `$$ E = mc^2 $$`.
@@ -100,6 +82,8 @@ $$
 
 Note that MathJax 3 is [a major re-write of MathJax](https://docs.mathjax.org/en/latest/upgrading/whats-new-3.0.html) that brought a significant improvement to the loading and rendering speed, which is now [on par with KaTeX](http://www.intmath.com/cg5/katex-mathjax-comparison.php).
 
+
+***
 
 ## Citations
 
@@ -135,7 +119,7 @@ For larger blocks of code, add a `block` attribute:
   }
 </d-code>
 
-**Note:** `<d-code>` blocks do not look well in the dark mode.
+**Note:** `<d-code>` blocks do not look good in the dark mode.
 You can always use the default code-highlight using the `highlight` liquid tag:
 
 {% highlight javascript %}
