--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,29 @@
 ---
 
 
+@inproceedings{10.1145/3539494.3542757,
+  author = {Li, Zhiying and Li, Tianxing},
+  title = {SkinProfiler: Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua},
+  year = {2022},
+  isbn = {9781450394062},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  url = {https://doi.org/10.1145/3539494.3542757},
+  doi = {10.1145/3539494.3542757},
+  abstract = {Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.},
+  booktitle = {Proceedings of the 2022 Workshop on Emerging Devices for Digital Biomarkers},
+  pages = {1–6},
+  numpages = {6},
+  keywords = {skin health, smartphones, mobile health, photometric stereo},
+  location = {Portland, Oregon},
+  series = {DigiBiom '22},
+  selected = {false},
+  image = {/assets/img/placeholders/5.jpg},
+  html = {https://doi.org/10.1145/3539494.3542757},
+  pdf = {SkinProfiler.pdf},
+  slides = {SkinProfiler_slides_mobisys22.pdf},
+  abbr = {MobiSys'23},
+}
 
 
 
